<resources>
    <string name="app_name">App Gods Project</string>
    <string name="nav_add_receipt">Add Receipt</string>
    <string name="nav_add_item">Add Item</string>
    <string name="nav_receipt_history">Receipt History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_stores">Stores</string>
    <string name="nav_analysis">Spending Summary</string>
    <string name="nav_open_drawer">Open nav drawer</string>
    <string name="nav_close_drawer">Close nav drawer</string>

    <string name="history_spinner_label">View Receipts For </string>
    <string name="analysis_spinner_label">View Spending For </string>
    <string-array name="history_time_array">
        <item>Past Week</item>
        <item>Past Month</item>
        <item>Past Year</item>
        <item>All Time</item>
    </string-array>
    <string name="analysis_choice_spinner_label">Sort By </string>
    <string-array name="analysis_spinner_array">
        <item>General Stats</item>
        <item>Category</item>
        <item>Location</item>
        <item>Date</item>
    </string-array>

    <string name="finish">Finish</string>

    <string name="add_receipt_header">Add a receipt</string>
    <string name="add_items">Add Items</string>
    <string name="add_item">Add Item</string>
    <string name="add_category">Add Category: </string>
    <string name="add_store">Add Store: </string>
    <string name="label_sub_total">Subtotal: </string>
    <string name="label_total">Total: </string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>

    <string name="hint_category">Category</string>
    <string name="hint_store">Store</string>
    <string name="hint_name">Name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_location">Location</string>
    <string name="hint_price">Price</string>
    <string name="hint_total">Total</string>
    <string name="hint_subtotal">Subtotal</string>
    <string name="hint_date">Date</string>
    <string name="categories_spinner_default">Choose categories</string>

    <string name="pie_category_title">What Have I Spent My Money On?</string>
    <string name="pie_location_title">Where Have I Spent My Money?</string>
    <string name="bar_title">When Have I Spent My Money?</string>

    <string name="detail_price">Total Price: </string>
    <string name="toast_store_empty">Please enter a store name in the field above</string>
    <string name="toast_store_in_db">That store already exists, please enter a different store name</string>
    <string name="toast_category_empty">Please enter a category name in the field above</string>
    <string name="toast_category_in_db">That category already exists, please enter a different category</string>

    <string name="validations_add_items">Please fill out Name, Quantity and Price fields correctly.</string>
    <string name="validations_add_receipt">Please fill out Location and SubTotal fields correctly.</string>
    <string name="toast_receipt_added">Receipt added.</string>

    <string name="stats_total_spent">Total Dollars Spent: </string>
    <string name="stats_receipts_stored">Number of Receipts Stored: </string>
    <string name="stats_expensive_receipt">Most Money Spent on a Receipt: </string>
    <string name="stats_items_purchased">Number of Items Purchased: </string>
    <string name="stats_expensive_item">Most Expensive Item: </string>
</resources>
